// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders all future items loaded regardless of other props 1`] = `
<div>
  <Container
    as="div"
    display={null}
    padding="x-large"
    textAlign="center"
  >
    <Typography
      as="span"
      color="secondary"
      letterSpacing="normal"
      size="small"
    >
      All items loaded
    </Typography>
  </Container>
</div>
`;

exports[`renders load more by default 1`] = `
<div>
  <Container
    as="div"
    display={null}
    padding="x-large"
    textAlign="center"
  >
    <Button
      as="button"
      buttonRef={[Function]}
      fluidWidth={false}
      margin="0"
      onClick={[Function]}
      size="medium"
      type="button"
      variant="link"
    >
      Load more
    </Button>
  </Container>
  <Waypoint
    bottomOffset="0px"
    fireOnRapidScroll={true}
    horizontal={false}
    onEnter={[Function]}
    onLeave={[Function]}
    onPositionChange={[Function]}
    topOffset="0px"
  />
</div>
`;

exports[`renders loading when indicated 1`] = `
<div>
  <Container
    as="div"
    display={null}
    padding="x-large"
    textAlign="center"
  >
    <Container
      display={null}
    >
      <Container
        display="inline"
      >
        <Spinner
          margin="0 x-small 0 0"
          size="small"
          title="Loading..."
          variant="default"
        />
      </Container>
      <Typography
        as="span"
        color="secondary"
        letterSpacing="normal"
        size="small"
      >
        Loading...
      </Typography>
    </Container>
  </Container>
</div>
`;
